change GC option